--- a/002/index.html
+++ b/002/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en-us" dir="ltr">
-<head><script src="/ribbit-archive/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=ribbit-archive/livereload" data-no-instant defer></script>
+<head>
   <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
 <title>RA-002 | Ribbit Archive</title>
 
-    <link rel="stylesheet" href="/ribbit-archive/css/main.css">
+      <link rel="stylesheet" href="/ribbit-archive/css/main.min.46abae3fdae033bcef028a6ddb1edbc78a9910a603b3eaa4c8bf810b58c26d1b.css" integrity="sha256-RquuP9rgM7zvAopt2x7bx4qZEKYDs&#43;qkyL&#43;BC1jCbRs=" crossorigin="anonymous">
+
+<link rel="apple-touch-icon" sizes="180x180" href="/ribbit-archive/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/ribbit-archive/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/ribbit-archive/favicon-16x16.png">
+<link rel="manifest" href="/ribbit-archive/site.webmanifest">
+
 </head>
 <body>
   <header>
     <div id="brand">
-    <a class="icon-link" href="http://localhost:1313/ribbit-archive/">
+    <a class="icon-link" href="https://ilovemicroplastics.github.io/ribbit-archive/">
       <img
         class="icon"
         src="/ribbit-archive/images/spencer_the_frog.svg"
       />
     </a>
     <div class="text">
-      <a href="http://localhost:1313/ribbit-archive/"><h1>Ribbit Archive</h1></a>
+      <a href="https://ilovemicroplastics.github.io/ribbit-archive/"><h1>Ribbit Archive</h1></a>
       <h3>Curated OSH hardware list</h3>
     </div>
   </div>
