--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ If you don&rsquo;t know how to handle these safely don&rsquo;t be afraid to ask 
     </li>
     
     <li>
-        <a href="/ribbit-archive/003/">RA-003</a> - placeholder
+        <a href="/ribbit-archive/003/">RA-003</a> - Dronecoria Drone
     </li>
     
     <li>
