--- a/002/index.html
+++ b/002/index.html
@@ -42,7 +42,8 @@ RA-002 includes a microcontroller (MC) so being familiar with MCs will be helpfu
 <p>Build instructions are complete, some may find them to be slightly fragmented between the GitHub and video tutorials.
 There is a discord community relating to RA-002 which may be consulted for Q&amp;A.
 Owing to the fact that component kits can be obtained online for approximately 120GBP (2025) (additional components may need to be 3D printed), sourcing the components is simple and detail work is minimal.
-Most of the process involves combining components with screws.</p>
+Most of the process involves combining components with screws.
+It is important to note that as of writing the project is 3 years old, so constructers must be prepared for unexpected changes in manufactured components.</p>
 <p><strong>Description:</strong> RA-002 is a machine which turns PET water bottles into 3D printer filament. It is a small device around the size of a kitchen blender.
 It was designed to make it cheaper and easier for independent makers to create products from locally obtained waste materials instead of relying on virgin plastic.
 The design is clean, aesthetically pleasing, and modular. The modularity makes repairs easy, and for those capable enough to modify it to suit a different purpose.
@@ -57,7 +58,7 @@ RA-002 is operated remotely via a locally hosted app that can run on a any smart
 It was created in California (USA) by industrial designer Reiten Cheng in 2022.</p>
 <p><strong>Link to Design Files:</strong> <a href="https://www.reiten.design/polyformer">Polyformer project page</a></p>
 
-        Article Version: 0 -
+        Article Version: 1 -
         Latest edit: 23/09/2025
     </div>
 
