Added RA-004, and other minor edits

--- a/006/index.html
+++ b/006/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>RA-006 | Ribbit Archive</title>
 
-      <link rel="stylesheet" href="/ribbit-archive/css/main.min.46abae3fdae033bcef028a6ddb1edbc78a9910a603b3eaa4c8bf810b58c26d1b.css" integrity="sha256-RquuP9rgM7zvAopt2x7bx4qZEKYDs&#43;qkyL&#43;BC1jCbRs=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/ribbit-archive/css/main.min.86e79a8d5665016a9f77389cefc222f7c50823abf1e07e684ddb936e771bbe8e.css" integrity="sha256-hueajVZlAWqfdzic78Ii98UII6vx4H5oTduTbncbvo4=" crossorigin="anonymous">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/ribbit-archive/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ribbit-archive/favicon-32x32.png">
