--- a/001/index.html
+++ b/001/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>RA-001 | Ribbit Archive</title>
 
-      <link rel="stylesheet" href="/ribbit-archive/css/main.min.46abae3fdae033bcef028a6ddb1edbc78a9910a603b3eaa4c8bf810b58c26d1b.css" integrity="sha256-RquuP9rgM7zvAopt2x7bx4qZEKYDs&#43;qkyL&#43;BC1jCbRs=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/ribbit-archive/css/main.min.86e79a8d5665016a9f77389cefc222f7c50823abf1e07e684ddb936e771bbe8e.css" integrity="sha256-hueajVZlAWqfdzic78Ii98UII6vx4H5oTduTbncbvo4=" crossorigin="anonymous">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/ribbit-archive/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ribbit-archive/favicon-32x32.png">
@@ -36,7 +36,7 @@
 <p><strong>Device type:</strong> Mobile Platform</p>
 <p><strong>Name:</strong> OpenScout</p>
 <p><strong>License:</strong> <a href="https://cern-ohl.web.cern.ch/">CERN-OHL-W-2.0</a></p>
-<p><strong>Build Complexity:</strong> No specialised tools are required to assemble RA-001 beyond a flathead and Philips-head screwdriver, along with M2/3/4/5 Hex Keys.
+<p><strong>Build Complexity:</strong> No specialised tools are required to assemble RA-001 beyond a soldering iron, flathead and Philips-head screwdriver, along with M2/3/4/5 Hex Keys.
 Having access to a laser cutter is beneficial for the acrylic stages, but they can be accomplished through alternative means such as ordering pre-cut acrylic online.
 At least basic electronics skills are required, as one must read a circuit diagram, connect the wires correctly, and be able to safely handle a lead-acid battery.
 Beyond that, assembly is simply screwing parts together.</p>
@@ -61,9 +61,12 @@ It must be noted that the simulation is not perfectly accurate to real world phy
 <p>RA-001 was developed at the University of Lincoln (UK) in 2021 as a teaching project, and in part to attempt to address the prohibitive costs of many research robots.
 As of writing the latter is a work in progress, but RA-001 is perfectly viable as a learning project for anyone new to robotics.
 For this purpose the design oversights are actually a benefit because they require the builder to use critical thinking and to develop design skills to finish construction.</p>
-<p><strong>Link to Design Files:</strong> <a href="https://github.com/ilovemicroplastics/OpenScoutV1-1/tree/main">GitHub</a></p>
+<p><strong>Link to Design Files:</strong> <a href="https://github.com/ilovemicroplastics/OpenScoutV1-1/tree/main">GitHub</a>
+<a href="https://zenodo.org/records/10263676">GitHub (outdated archive)</a>
+<a href="https://doi.org/10.5334/joh.54">Original Paper</a>
+<a href="https://arxiv.org/abs/2508.00625">Paper Analysing History</a></p>
 
-        Article Version: 2 -
+        Article Version: 4 -
         Latest edit: 23/09/2025
     </div>
 
