--- a/002/index.html
+++ b/002/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>RA-002 | Ribbit Archive</title>
 
-      <link rel="stylesheet" href="/ribbit-archive/css/main.min.46abae3fdae033bcef028a6ddb1edbc78a9910a603b3eaa4c8bf810b58c26d1b.css" integrity="sha256-RquuP9rgM7zvAopt2x7bx4qZEKYDs&#43;qkyL&#43;BC1jCbRs=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/ribbit-archive/css/main.min.86e79a8d5665016a9f77389cefc222f7c50823abf1e07e684ddb936e771bbe8e.css" integrity="sha256-hueajVZlAWqfdzic78Ii98UII6vx4H5oTduTbncbvo4=" crossorigin="anonymous">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/ribbit-archive/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ribbit-archive/favicon-32x32.png">
@@ -56,9 +56,11 @@ at which point the process is largely autonomous.
 RA-002 is operated remotely via a locally hosted app that can run on a any smart device (like a PC or tablet), through a wireless connection to the MC.</p>
 <p>RA-002 has a community (centred on discord) of more than 4000 members distributed worldwide, but it is difficult to ascertain how widespread practical deployment is.
 It was created in California (USA) by industrial designer Reiten Cheng in 2022.</p>
-<p><strong>Link to Design Files:</strong> <a href="https://www.reiten.design/polyformer">Polyformer project page</a></p>
+<p><strong>Link to Design Files:</strong> <a href="https://www.reiten.design/polyformer">Polyformer Project Page</a>
+<a href="https://github.com/Reiten966/Polyformer">GitHub</a>
+<a href="https://certification.oshwa.org/us002136.html">OSHWA</a></p>
 
-        Article Version: 1 -
+        Article Version: 2 -
         Latest edit: 23/09/2025
     </div>
 
