--- a/003/index.html
+++ b/003/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>RA-003 | Ribbit Archive</title>
 
-      <link rel="stylesheet" href="/ribbit-archive/css/main.min.46abae3fdae033bcef028a6ddb1edbc78a9910a603b3eaa4c8bf810b58c26d1b.css" integrity="sha256-RquuP9rgM7zvAopt2x7bx4qZEKYDs&#43;qkyL&#43;BC1jCbRs=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/ribbit-archive/css/main.min.86e79a8d5665016a9f77389cefc222f7c50823abf1e07e684ddb936e771bbe8e.css" integrity="sha256-hueajVZlAWqfdzic78Ii98UII6vx4H5oTduTbncbvo4=" crossorigin="anonymous">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/ribbit-archive/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ribbit-archive/favicon-32x32.png">
@@ -54,10 +54,11 @@ As an added benefit, plywood is easy to mend with glue which increases the long-
 <p>RA-003 is well received online but it&rsquo;s difficult to quanitify how widespread it is in practice.
 Owing to it&rsquo;s open licensing terms, it is trivial to repurpose the frame for tasks other than sowing seeds.
 It was created by Dronecoria in their laboratory based in Capilerilla (Spain), Sierra Nevada Natural Park in 2025.</p>
-<p><strong>Link to Design Files:</strong> <a href="https://www.instructables.com/Dronecoria-Drone-for-Forest-Restoration/">Instructables</a></p>
-<p><a href="https://dronecoria.org/ecofine-portfolio/dronecoria-drone/">Project Website</a></p>
+<p><strong>Link to Design Files:</strong> <a href="https://www.instructables.com/Dronecoria-Drone-for-Forest-Restoration/">Instructables</a>
+<a href="https://dronecoria.org/ecofine-portfolio/dronecoria-drone/">Project Website</a>
+<a href="https://certification.oshwa.org/es000054.html">OSHWA</a></p>
 
-        Article Version: 0 -
+        Article Version: 2 -
         Latest edit: 23/09/2025
     </div>
 
