--- a/004/index.html
+++ b/004/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width">
 <title>RA-004 | Ribbit Archive</title>
 
-      <link rel="stylesheet" href="/ribbit-archive/css/main.min.46abae3fdae033bcef028a6ddb1edbc78a9910a603b3eaa4c8bf810b58c26d1b.css" integrity="sha256-RquuP9rgM7zvAopt2x7bx4qZEKYDs&#43;qkyL&#43;BC1jCbRs=" crossorigin="anonymous">
+      <link rel="stylesheet" href="/ribbit-archive/css/main.min.86e79a8d5665016a9f77389cefc222f7c50823abf1e07e684ddb936e771bbe8e.css" integrity="sha256-hueajVZlAWqfdzic78Ii98UII6vx4H5oTduTbncbvo4=" crossorigin="anonymous">
 
 <link rel="apple-touch-icon" sizes="180x180" href="/ribbit-archive/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/ribbit-archive/favicon-32x32.png">
@@ -31,14 +31,30 @@
   <main>
     
     <div id = article>
-        <p>Device #: RA-004</p>
-<p>Device type:</p>
-<p>License:</p>
-<p>Build Complexity:</p>
-<p>Description:</p>
+        <p class="article-image"><img src="/ribbit-archive/images/RA/004.jpg" alt=""></p>
+<p><strong>Device #:</strong> RA-004</p>
+<p><strong>Device type:</strong> Mobile Platform</p>
+<p><strong>Name:</strong> Flone 3.0</p>
+<p><strong>License:</strong> <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA</a></p>
+<p><strong>Build Complexity:</strong> RA-004 requires a laser cutter, plywood glue, a computer, a soldering iron, and a phone.
+A 3D printer may be used instead of a laser cutter but that would take additional effort.
+As most components are built with machines, there is little fine detail work.</p>
+<p>RA-004 is a simple project designed with beginers in mind and it isn&rsquo;t expected to take very long to build.
+The BoM is approximately 150USD (2016).
+It is important to note that RA-004 is 9 years old as of writing, thus it is fully expected that many components are no longer available or have changed.
+This adds a significant level of difficulty, although it can also be considered a learning opportunity for electronic control systems.</p>
+<p><strong>Description:</strong> RA-004 is a small aproximately 20cm by 20cm camera drone, which is primarily made from plywood.
+The design does not contain a camera, but rather it has a mount so a phone with the camera facing down can be attached to it.
+RA-004 is easily modifiable.
+Example modifications have been created, they are: a gimbaled camera, a seed drop-release system, and a spray paint addon.</p>
+<p>RA-004 was well received online when it was created by aeracoop in 2016.</p>
+<p><strong>Link to Design Files:</strong> <a href="https://www.instructables.com/Flone-30/">Instructables</a>
+<a href="https://github.com/aeracoop/flone-frame">GitHub (frame)</a>
+<a href="https://flone.cc/">Project Website</a>
+<a href="https://github.com/Fewlaps/flone-android">GitHub (android app)</a></p>
 
-        Article Version: 0 -
-        Latest edit: 15/09/2025
+        Article Version: 1 -
+        Latest edit: 23/09/2025
     </div>
 
   </main>
