--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ If you don&rsquo;t know how to handle these safely don&rsquo;t be afraid to ask 
     </li>
     
     <li>
-        <a href="/ribbit-archive/005/">RA-005</a> - placeholder
+        <a href="/ribbit-archive/005/">RA-005</a> - Green Detect
     </li>
     
     <li>
