--- a/002/index.html
+++ b/002/index.html
@@ -38,30 +38,31 @@
 <p><strong>License:</strong> <a href="https://spdx.org/licenses/GPL-3.0-only.html">GPL-3.0-ONLY</a></p>
 <p><strong>Build Complexity:</strong> Assembling RA-002 requires a screwdriver, scissors, a good quality soldering iron, a 3D printer, and a computer.
 Electronics and workshop skills are needed, as the design includes high voltage components and moderate amounts of VOC.
-RA-002 includes a microcontroller (MC) so being familiar with MCs will be helpful.</p>
-<p>Build instructions are complete, some may find them to be slightly fragmented between the GitHub and video tutorials.
+RA-002 includes a microcontroller (MC) so being familiar with MCs will be helpful.
+Some internal mechanisms may require focus to assemble properly, but most of the process involves 3D printing and combining components with screws.</p>
+<p>Build instructions are mostly complete, some may find them to be slightly fragmented between the GitHub and video tutorials.
 There is a discord community relating to RA-002 which may be consulted for Q&amp;A.
-Owing to the fact that component kits can be obtained online for approximately 120GBP (2025) (additional components may need to be 3D printed), sourcing the components is simple and detail work is minimal.
-Most of the process involves combining components with screws.
+Owing to the fact that component kits can be obtained online for approximately 120GBP (2025), sourcing the components is simple.
 It is important to note that as of writing the project is 3 years old, so constructers must be prepared for unexpected changes in manufactured components.</p>
-<p><strong>Description:</strong> RA-002 is a machine which turns PET water bottles into 3D printer filament. It is a small device around the size of a kitchen blender.
+<p><strong>Description:</strong> RA-002 is a machine which turns PET water bottles into 3D printer filament. It is a small device around the size of a toaster.
 It was designed to make it cheaper and easier for independent makers to create products from locally obtained waste materials instead of relying on virgin plastic.
-The design is clean, aesthetically pleasing, and modular. The modularity makes repairs easy, and for those capable enough to modify it to suit a different purpose.
 Before construction, it must be ensured that your 3D printer can handle the filament outputted by RA-002.
 The GitHub notes that it has to be able to handle over 260C, and cannot be PTFE lined.</p>
 <p>It is operated as following:
 The first step is to manually cut the bottle into a consistent thin strip of PET using a small mechanism.
 Next the resulting ribbon is placed into RA-002 (in a ventilated area), heating it, and then extruding a round 1.75mm rPET filament,
-at which point the process is largely autonomous.
-RA-002 is operated remotely via a locally hosted app that can run on a any smart device (like a PC or tablet), through a wireless connection to the MC.</p>
-<p>RA-002 has a community (centred on discord) of more than 4000 members distributed worldwide, but it is difficult to ascertain how widespread practical deployment is.
-It was created in California (USA) by industrial designer Reiten Cheng in 2022.</p>
+at which point the process is largely autonomous.</p>
+<p>The design is clean, aesthetically pleasing, and modular. The modularity makes repairs easy, and for those capable enough to modify it to suit a different purpose.
+RA-002 is operated remotely via a locally hosted app that can run on a any smart device (like a PC or tablet), through a wireless connection to the MC.
+RA-002 has a community (centred on discord) of more than 4000 members distributed worldwide, but it is difficult to ascertain how widespread practical deployment is.
+Multiple users have contributed their modifications and they are available in the GitHub repository.</p>
+<p>It was created in California (USA) by industrial designer Reiten Cheng in 2022.</p>
 <p><strong>Link to Design Files:</strong> <a href="https://www.reiten.design/polyformer">Polyformer Project Page</a>
 <a href="https://github.com/Reiten966/Polyformer">GitHub</a>
 <a href="https://certification.oshwa.org/us002136.html">OSHWA</a></p>
 
-        Article Version: 2 -
-        Latest edit: 23/09/2025
+        Article Version: 3 -
+        Latest edit: 24/09/2025
     </div>
 
   </main>
