--- a/004/index.html
+++ b/004/index.html
@@ -38,23 +38,25 @@
 <p><strong>License:</strong> <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA</a></p>
 <p><strong>Build Complexity:</strong> RA-004 requires a laser cutter, plywood glue, a computer, a soldering iron, and a phone.
 A 3D printer may be used instead of a laser cutter but that would take additional effort.
-As most components are built with machines, there is little fine detail work.</p>
-<p>RA-004 is a simple project designed with beginers in mind and it isn&rsquo;t expected to take very long to build.
-The BoM is approximately 150USD (2016).
+As most components are built with machines, there is little fine detail work.
+RA-004 is a simple project designed with beginners in mind and it isn&rsquo;t expected to take very long to build.</p>
+<p>Instructions are clear and to the point, with short videos demonstrating assembly.
 It is important to note that RA-004 is 9 years old as of writing, thus it is fully expected that many components are no longer available or have changed.
-This adds a significant level of difficulty, although it can also be considered a learning opportunity for electronic control systems.</p>
+This adds a significant level of difficulty, although it can also be considered a learning opportunity for electronic control systems.
+The BoM is approximately 150USD (2016).</p>
 <p><strong>Description:</strong> RA-004 is a small aproximately 20cm by 20cm camera drone, which is primarily made from plywood.
 The design does not contain a camera, but rather it has a mount so a phone with the camera facing down can be attached to it.
-RA-004 is easily modifiable.
+It appears to hold the phone safely and fly well in demonstration videos.</p>
+<p>RA-004 is easily modifiable.
 Example modifications have been created, they are: a gimbaled camera, a seed drop-release system, and a spray paint addon.</p>
-<p>RA-004 was well received online when it was created by aeracoop in 2016.</p>
+<p>RA-004 was created by aeracoop in 2016, the same people who are behind RA-003.</p>
 <p><strong>Link to Design Files:</strong> <a href="https://www.instructables.com/Flone-30/">Instructables</a>
 <a href="https://github.com/aeracoop/flone-frame">GitHub (frame)</a>
 <a href="https://flone.cc/">Project Website</a>
 <a href="https://github.com/Fewlaps/flone-android">GitHub (android app)</a></p>
 
-        Article Version: 1 -
-        Latest edit: 23/09/2025
+        Article Version: 2 -
+        Latest edit: 24/09/2025
     </div>
 
   </main>
