--- a/005/index.html
+++ b/005/index.html
@@ -39,9 +39,11 @@
 <p><strong>Build Complexity:</strong> RA-005 requires a few tools to construct; soldering iron, a 3D printer for casing, and a screwdriver.
 Advanced electronics skills are essential as RA-005 provides very little tutorial apart from the schematics.
 This is sufficient, but will require being able to read an electronic schematic.
-Microcontroller skills may be needed if the build instructions become outdated and firmware updates are needed.</p>
-<p>RA-005 is very small so price is unlikely to be a constraint, at around 30USD (2025) per unit.
-But it is 3 years old as of writing, and it is likely certain electronic components may be discontinued or modified, therefore be prepared to make ad-hoc adjustments.</p>
+Microcontroller skills may be needed if the build instructions become outdated and firmware updates are needed.
+There is no significant detailing work apart form soldering.</p>
+<p>As of writing RA-005 had 3 years since the last update,
+and it is likely certain electronic components may be discontinued or modified. Be prepared to make ad-hoc adjustments.
+RA-005 is very small so price is unlikely to be a constraint, at around 30USD (2025) per unit.</p>
 <p><strong>Description:</strong> RA-005 is a small off-grid sensor box which is capable of measuring the temperature, distance, smoke presence, air humidity, and soil humidity.
 It is powered by a small solar panel.
 A key distinguishing feature is that they are designed to work in a network, even in the forest where there is no centralised wireless communication system present.
@@ -58,8 +60,8 @@ The circuit can be modified to include other sensors, but each RA-005 may only o
 <a href="https://hackaday.io/project/186064-green-detect">Hackaday</a>
 <a href="https://certification.oshwa.org/it000009.html">OSHWA</a></p>
 
-        Article Version: 1 -
-        Latest edit: 23/09/2025
+        Article Version: 2 -
+        Latest edit: 24/09/2025
     </div>
 
   </main>
