--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
 
     <div id = "preamble">
 
-    <p>Open Source Hardware is a great way to share designs of devices/robots.
-The aim of this list is to help share devices which can realistically be built and operated by a single person,
-especially if: they are suitable as lab instruments, for small scale local production, mobile/stationary robots to mediate the functionality, or home automation.
-A secondary purpose is to make OSH easier to reference.</p>
-<p>This is an overview website. All devices are created by their respective designers, and the device&rsquo;s precise licensing terms are listed in each document.
-The Ribbit Archive creator is not responsible for any damage or loss to the end users.
-Always practice proper precaution, especially when handling things that are industrial chemicals, heavy, electrical, or sharp.
-If you don&rsquo;t know how to handle these safely don&rsquo;t be afraid to ask someone who does, don&rsquo;t trust AI chatbots with this.</p>
+    <p>Open Source Hardware is a paradigm of sharing devices/robot build instructions. This list focuses on OSH devices which can realistically be built and operated by a single person, especially if: they are useful as lab equipment, for small scale local production, modifiable mobile/stationary robots, or home automation.</p>
+<p>A key goal of RA is to create a diverse collection of interesting designs to learn from.
+Which is why duplicative entries are avoided and unique design features are highlighted.</p>
+<p>This is an overview website. All devices are created by their respective designers, and their exact licensing terms are listed in each document.</p>
+<p><em>The RA creator is not responsible for any damage or loss to the end users.
+Always practice proper precaution, especially when handling things that are electrical, heavy, sharp or industrial chemicals.
+Ensure you are following local laws, e.g. regarding drone registration.
+If you don&rsquo;t know how to handle these safely don&rsquo;t be afraid to ask someone experienced for help (and don&rsquo;t trust AI chatbots).</em></p>
 
     <h1>Ribbit Series</h1>
     <hr class="solid">
@@ -65,7 +65,7 @@ If you don&rsquo;t know how to handle these safely don&rsquo;t be afraid to ask 
     </li>
     
     <li>
-        <a href="/ribbit-archive/004/">RA-004</a> - Flone 3.0
+        <a href="/ribbit-archive/004/">RA-004</a> - Flone
     </li>
     
     <li>
