--- a/003/index.html
+++ b/003/index.html
@@ -37,29 +37,31 @@
 <p><strong>Name:</strong> Dronecoria Drone</p>
 <p><strong>License:</strong> <a href="https://creativecommons.org/licenses/by-sa/4.0/deed.en">CC-BY-SA-4.0</a></p>
 <p><strong>Build Complexity:</strong> RA-003 requires a large laser cutter, a 3D printer, a soldering iron, a voltmeter, and a screwdriver.
+It is advisable to have electronics skills to safely assemble the circuits, as well as workshop skills to cut plywood components and 3D print the release mechanism.
+Because almost every component is created in a machine, there is very little fine detailing work.
 The difficulty in constructing RA-003 is mostly in finding a large enough laser cutter, as despite it&rsquo;s large size RA-003 is remarkably simple to manufacture.
-It is advisable to have electronics skills to safely assemble the circuits, as well as workshop skills to cut plywood components and 3D print the release mechanism.</p>
-<p>Because almost every component is created in a machine, there is very little fine detailing work.
-Most of the time building RA-003 comes from preparing the components.
-The BoM comes out to less than 3000EUR (2025) which is considered low cost when compared to devices of the same class.</p>
+The majority of the time building RA-003 comes from preparing the components.</p>
+<p>Instruction clarity is very good, with a tutorial containing both text and short videos for assembly.
+RA-003 was released in 2025 so parts should be available.
+BoM comes out to less than 3000EUR (2025) which is considered to be low cost when compared to devices of the same class.</p>
 <p><strong>Description:</strong> RA-003 is an approximately 1.5m by 1.5m plywood drone, with a primary purpose of ecological restoration via aerial seed sowing.
 In it&rsquo;s base form it is well suited for both forestry and agriculture.
 It is capable of flying for 41 minutes without a payload, and can store up to 10kg of seeds.
-This is further mediated by autopilot software capable of sowing one hectare in 10 minutes, with a seed density of about 5 per square meter.
-The design is aesthetically pleasing and minimal, while using zip-ties through laser cut channels to hold the frame together.</p>
-<p>There is an intricate 3D printed seed deployment mechanism which allows the use of any standard screw-cap plastic bottle as a seed storage,
+This is further mediated by autopilot software capable of sowing one hectare in 10 minutes, with a seed density of about 5 per square meter.</p>
+<p>The design is aesthetically pleasing and minimal, while using zip-ties through laser cut channels to hold the frame together.
+There is an intricate 3D printed seed deployment mechanism which allows the use of any standard screw-cap plastic bottle as a seed storage,
 and an opening which can be varied to set sowing rate.
 Plywood was historically used as a material for planes, and was selected for this project both for it&rsquo;s low weight and biodegradeability in case of crashing irecoverably.
-As an added benefit, plywood is easy to mend with glue which increases the long-term usability.</p>
-<p>RA-003 is well received online but it&rsquo;s difficult to quanitify how widespread it is in practice.
-Owing to it&rsquo;s open licensing terms, it is trivial to repurpose the frame for tasks other than sowing seeds.
-It was created by Dronecoria in their laboratory based in Capilerilla (Spain), Sierra Nevada Natural Park in 2025.</p>
+As an added benefit, plywood is easy to mend with glue which increases the long-term usability.
+RA-003 is well received online but it&rsquo;s difficult to quanitify how widespread it is in practice.
+Owing to it&rsquo;s open licensing terms, it is trivial to repurpose the frame for tasks other than sowing seeds.</p>
+<p>It was created by Dronecoria in their laboratory based in Capilerilla (Spain), Sierra Nevada Natural Park in 2025.</p>
 <p><strong>Link to Design Files:</strong> <a href="https://www.instructables.com/Dronecoria-Drone-for-Forest-Restoration/">Instructables</a>
 <a href="https://dronecoria.org/ecofine-portfolio/dronecoria-drone/">Project Website</a>
 <a href="https://certification.oshwa.org/es000054.html">OSHWA</a></p>
 
-        Article Version: 2 -
-        Latest edit: 23/09/2025
+        Article Version: 3 -
+        Latest edit: 24/09/2025
     </div>
 
   </main>
